JS + Fancy Background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
         <title>Honour Roll</title>
     </head>
     <body>
-        <div class="board-container"></div>
+        <div class="root">
+            <div class="boards-container"></div>
+        </div>
+        <div class="fancy-background">
+            <div class="fancy-elements-container">
+                <div class="left-line">
+                    <img
+                        src="fancy-vertical-logo.png"
+                        alt="fancy-vertical-logo"
+                    />
+                </div>
+                <div class="right-line">
+                    <img
+                        src="fancy-vertical-logo.png"
+                        alt="fancy-vertical-logo"
+                    />
+                </div>
+            </div>
+        </div>
     </body>
 </html>
