--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
         <title>Honour Roll</title>
+        <link
+            href="https://fonts.googleapis.com/css?family=Cinzel Decorative"
+            rel="stylesheet"
+        />
     </head>
     <body>
+        <div class="WebsiteName">
+            <h1>HONOUR ROLL</h1>
+        </div>
+        <div class="underline"></div>
         <div class="root">
             <div class="boards-container"></div>
+            <div class="underline-main1"></div>
+            <div class="underline-main2"></div>
         </div>
         <div class="fancy-background">
             <div class="fancy-elements-container">
