Add loading animation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div class="underline"></div>
         <div class="root">
+            <div class="loading"><img src="loading.svg" alt="loading" /></div>
             <div class="boards-container"></div>
             <div class="underline-main1"></div>
             <div class="underline-main2"></div>
